# fractal-madness

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
shaders/: deep_fractal.wgsl  display.wgsl  fractal.wgsl  fullscreen.wgsl
src/: color.rs  constants.rs  deep_renderer.rs  input.rs  lib.rs  renderer.rs  ui.rs  webgpu.rs
src/deep_zoom/: mod.rs  params.rs  reference.rs  series_approx.rs
src/fractal/: buffalo.rs  burning_ship.rs  celtic.rs  heart.rs  julia.rs  magnet.rs  mandelbrot.rs  mod.rs  newton.rs  nova.rs  perpendicular.rs  phoenix.rs  spider.rs  tricorn.rs
web/: index.html  main.ts  style.css
web/public/: site.webmanifest
