[package]
name = "fractal-madness"
version = "0.1.0"
edition = "2021"
authors = ["johno"]
description = "WebGPU-accelerated fractal visualizer"

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = "0.19"
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1.0"
pollster = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "console",
]

[profile.release]
opt-level = 3
lto = true
