[package]
name = "fractal-madness"
version = "0.0.4"
edition = "2021"
authors = ["johno"]
description = "WebGPU-accelerated fractal visualizer"

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = { version = "23", features = ["webgl"] }
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = { version = "0.30", default-features = false, features = ["links"] }
winit = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1.0"
pollster = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.30", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "console",
]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
